Update 3. Synthesis & Final Report Generation.md

--- a/CHRO/Compensation & Benchmarking/3. Synthesis & Final Report Generation.md
+++ b/CHRO/Compensation & Benchmarking/3. Synthesis & Final Report Generation.md
@@ -1,16 +1,42 @@
-# Step 3: Synthesis and Final Report Generation
-
-The final step takes the analyst's conclusions and uses them to formulate a well-reasoned, defensible final report with a recommended compensation range.
-
-**Prompt:** "Act as a professional compensation consultant. Your task is to synthesize the critical analysis provided below and generate a final, well-justified compensation report for the specified role.
-
-**Input Data:** (Paste the critical analysis and conclusions from the output of Step 2 here).
-
-**Instructions:**
-* **Synthesize the Findings:** Using the reliability assessment and discrepancy analysis, weigh the different data sources to form a single, cohesive view of the market. Give more weight to the sources identified as more reliable or better-suited to the specific role and location.
-* **Establish a Final Range:** Based on the synthesized data, propose a recommended compensation range for the role, breaking it down into base salary and total compensation (including bonus and equity).
-* **Provide a Rationale:** Clearly explain the reasoning behind your proposed range. Justify why you chose to prioritize certain data points over others. For example, "The recommended total compensation range of \$X to \$Y is based primarily on the data from [Source A] and [Source C], which were found to be more reliable due to their larger, verified sample sizes for this specific role."
-* **Add Caveats:** Include a section on "Caveats and Influencing Factors." Remind the user that the range is a benchmark and that individual compensation can vary based on specific skills, company size, interview performance, and negotiation skill.
-* **Final Report:** Present the final output as a concise, professional report suitable for a hiring manager or a job seeker."
-
-This tiered approach ensures that the final recommendation is built on a foundation of sound data and rigorous analysis, avoiding the pitfalls of a single, monolithic prompt. It forces the process to be more deliberate and transparent, directly addressing the intellectual sparring partner persona you requested.
+{
+  "name": "CompensationReportSynthesis",
+  "description": "Synthesizes a critical analysis of compensation data to generate a final, well-justified report with a recommended compensation range.",
+  "persona": {
+    "role": "Professional Compensation Consultant",
+    "goal": "To synthesize the provided critical analysis and generate a final, well-justified compensation report for the specified role."
+  },
+  "input_variables": [
+    {
+      "name": "critical_analysis",
+      "description": "The critical analysis and conclusions from the previous step, including reliability assessments and discrepancy analysis of various compensation data sources.",
+      "type": "string"
+    }
+  ],
+  "instructions": [
+    {
+      "step": 1,
+      "title": "Synthesize the Findings",
+      "detail": "Using the reliability assessment and discrepancy analysis from the input, weigh the different data sources to form a single, cohesive view of the market. Give more weight to the sources identified as more reliable or better-suited to the specific role and location."
+    },
+    {
+      "step": 2,
+      "title": "Establish a Final Range",
+      "detail": "Based on the synthesized data, propose a recommended compensation range for the role. This range must be broken down into base salary and total compensation (including bonus and equity)."
+    },
+    {
+      "step": 3,
+      "title": "Provide a Rationale",
+      "detail": "Clearly explain the reasoning behind your proposed range. Justify why you chose to prioritize certain data points over others. For example, 'The recommended total compensation range of $X to $Y is based primarily on the data from [Source A] and [Source C], which were found to be more reliable due to their larger, verified sample sizes for this specific role.'"
+    },
+    {
+      "step": 4,
+      "title": "Add Caveats",
+      "detail": "Include a dedicated section titled 'Caveats and Influencing Factors.' Remind the user that the range is a benchmark and that individual compensation can vary based on specific skills, company size, interview performance, and negotiation skill."
+    }
+  ],
+  "output_format": {
+    "type": "professional_report",
+    "description": "Present the final output as a concise, well-structured report suitable for a hiring manager or a job seeker, with clear headings for each section (Recommended Range, Rationale, Caveats)."
+  },
+  "prompt_template": "Act as a professional compensation consultant. Your task is to synthesize the critical analysis provided below and generate a final, well-justified compensation report for the specified role.\n\n**Input Data:**\n{{critical_analysis}}\n\n**Instructions:**\n1.  **Synthesize the Findings:** Using the reliability assessment and discrepancy analysis, weigh the different data sources to form a single, cohesive view of the market. Give more weight to the sources identified as more reliable or better-suited to the specific role and location.\n2.  **Establish a Final Range:** Based on the synthesized data, propose a recommended compensation range for the role, breaking it down into base salary and total compensation (including bonus and equity).\n3.  **Provide a Rationale:** Clearly explain the reasoning behind your proposed range. Justify why you chose to prioritize certain data points over others.\n4.  **Add Caveats:** Include a section on 'Caveats and Influencing Factors.' Remind the user that the range is a benchmark and that individual compensation can vary based on specific skills, company size, interview performance, and negotiation skill.\n\n**Final Report:**\nPresent the final output as a concise, professional report suitable for a hiring manager or a job seeker."
+}
